--- a/gb/20/5/18/n12118036.md
+++ b/gb/20/5/18/n12118036.md
@@ -1,15 +1,15 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/reqcja3941/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/reqcja3941/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/reqcja3941/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/reqcja3941/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/reqcja3941/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/reqcja3941/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/reqcja3941/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/reqcja3941/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/reqcja3941/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/reqcja3941/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/reqcja3941/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/reqcja3941/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/reqcja3941/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/reqcja3941/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/reqcja3941/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/reqcja3941/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/reqcja3941/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/reqcja3941/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/reqcja3941/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/reqcja3941/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/reqcja3941/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/reqcja3941/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/reqcja3941/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/reqcja3941/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/reqcja3941/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/reqcja3941/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/reqcja3941/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/reqcja3941/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/reqcja3941/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/reqcja3941/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/reqcja3941/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/reqcja3941/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/reqcja3941/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/reqcja3941/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/reqcja3941/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/reqcja3941/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/reqcja3941/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/reqcja3941/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/reqcja3941/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/reqcja3941/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/reqcja3941/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/reqcja3941/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/reqcja3941/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/reqcja3941/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/reqcja3941/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/reqcja3941/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/reqcja3941/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/ydbzqt347/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/ydbzqt347/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/ydbzqt347/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>放宽限制首周末 澳洲人汽车娱乐花费大增</h2>
 
 <h6></h6>
 <hr>
-<p>【大纪元2020年05月18日讯】（大纪元记者陈光<ahref="https://github.com/reqcja3941/djy/blob/master/gb/tag/%E6%BE%B3%E6%B4%B2.md#1">澳洲</a>悉尼编译报导）一项最新调查数据显示，由于各州政府上周相继放宽了防疫的基本旅行限制，在刚刚过去的周末中，澳洲人用于给汽车加油、娱乐和到商店<ahref="https://github.com/reqcja3941/djy/blob/master/gb/tag/%E8%B4%AD%E7%89%A9.md#1">购物</a>的费用大增。</p>
-<p>金融对比网站Finder的最新数据显示，在上周六至周日的两天中，<ahref="https://github.com/reqcja3941/djy/blob/master/gb/tag/%E6%BE%B3%E6%B4%B2.md#1">澳洲</a>人花费在汽车上的支出比此前一周增加了84%，其中绝大多部分的花费是用于给汽车加油（增加了71%）。</p>
-<p>令人奇怪的是，上周末录得的最大支出增长是在电子产品的<ahref="https://github.com/reqcja3941/djy/blob/master/gb/tag/%E6%B6%88%E8%B4%B9.md#1">消费</a>上，与此前的周末相比增加了一倍。</p>
+<p>【大纪元2020年05月18日讯】（大纪元记者陈光<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E6%BE%B3%E6%B4%B2.md#1">澳洲</a>悉尼编译报导）一项最新调查数据显示，由于各州政府上周相继放宽了防疫的基本旅行限制，在刚刚过去的周末中，澳洲人用于给汽车加油、娱乐和到商店<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E8%B4%AD%E7%89%A9.md#1">购物</a>的费用大增。</p>
+<p>金融对比网站Finder的最新数据显示，在上周六至周日的两天中，<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E6%BE%B3%E6%B4%B2.md#1">澳洲</a>人花费在汽车上的支出比此前一周增加了84%，其中绝大多部分的花费是用于给汽车加油（增加了71%）。</p>
+<p>令人奇怪的是，上周末录得的最大支出增长是在电子产品的<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E6%B6%88%E8%B4%B9.md#1">消费</a>上，与此前的周末相比增加了一倍。</p>
 <p>其它现金花费大增的主要领域包括宠物护理（增75%）、娱乐（增65%）、医疗保健和药品费用（增64%）以及杂货（增53%）。</p>
-<p><ahref="https://github.com/reqcja3941/djy/blob/master/gb/tag/%E6%B6%88%E8%B4%B9.md#1">消费</a>者信心的上升对小企业主和经济学家来说都是一个积极的迹象。他们都预计<ahref="https://github.com/reqcja3941/djy/blob/master/gb/tag/%E4%B8%AD%E5%85%B1%E7%97%85%E6%AF%92.md#1">中共病毒</a>（武汉肺炎）对经济的影响将是广泛而持久的。</p>
+<p><ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E6%B6%88%E8%B4%B9.md#1">消费</a>者信心的上升对小企业主和经济学家来说都是一个积极的迹象。他们都预计<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E4%B8%AD%E5%85%B1%E7%97%85%E6%AF%92.md#1">中共病毒</a>（武汉肺炎）对经济的影响将是广泛而持久的。</p>
 <p>Finder的其它数据还显示，由于防疫限制影响了人们的财务状况，在受访的澳洲人中有15%的人正在寻求要求减少房租或暂停抵押贷款还款。如果从全国范围来看，这相当于290万澳人的房产权可能会受到疫情的影响。</p>
 <p>Finder的个人理财专家布朗（Kate Browne）建议人们，无论是拥有自己的住房还是在租房，现在都该重新评估自己的开支，看看可以在哪里削减开支，并货比三家。</p>
 <p>她还提醒人们，暂停抵押贷款还款应该是人们做出的最后选择。因为现在延迟还贷可能会使人们在贷款期限内损失五位数的金额。例如，如果房主以3.9%的浮动利率获得了50万澳元的贷款，期限为10年，那么如果他暂停还款6个月，他将最终需要多还11127澳元。</p>
@@ -22,47 +22,41 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/reqcja3941/djy/blob/master/gb/20/3/7/n11922895.md#1">维州新增5052例病毒感染 新州新增6014例</a></li>
-<li><a href="https://github.com/reqcja3941/djy/blob/master/gb/20/5/15/n12110827.md#1">60万人一月间失去工作 澳洲失业率升至6.2%</a></li>
-<li><a href="https://github.com/reqcja3941/djy/blob/master/gb/20/5/15/n12110922.md#1">保工补贴计划下月复审 政府将考虑是否延期</a></li>
-<li><a href="https://github.com/reqcja3941/djy/blob/master/gb/20/5/16/n12113706.md#1">疫情引经济困境 中央昆士兰大学恐裁员1/5</a></li>
-<li><a href="https://github.com/reqcja3941/djy/blob/master/gb/20/5/16/n12113732.md#1">财政厅：新州经济恐已陷衰退 30年来首次</a></li>
-<li><a href="https://github.com/reqcja3941/djy/blob/master/gb/20/5/16/n12114534.md#1">澳洲引领全球经济复苏 房地产将指明出路</a></li>
-<li><a href="https://github.com/reqcja3941/djy/blob/master/gb/20/5/16/n12114553.md#1">疫情下越来越多住房空置 悉尼租金料将下降</a></li>
-<li><a href="https://github.com/reqcja3941/djy/blob/master/gb/20/5/17/n12115806.md#1">中共商务部拒绝对话 澳洲提醒农民注意风险</a></li>
-<li><a href="https://github.com/reqcja3941/djy/blob/master/gb/22/2/25/n13603803.md#1">堪京小姐妹收集一万只旧袜子 支持废物利用</a></li>
-<li><a href="https://github.com/reqcja3941/djy/blob/master/gb/22/2/27/n13608433.md#1">南澳放宽餐饮场所和婚礼限制 重审隔离规定</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/7/n11922895.md#1">维州新增9149例病毒感染 新州新增20389例</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/5/15/n12110827.md#1">60万人一月间失去工作 澳洲失业率升至6.2%</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/5/15/n12110922.md#1">保工补贴计划下月复审 政府将考虑是否延期</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/5/16/n12113706.md#1">疫情引经济困境 中央昆士兰大学恐裁员1/5</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/5/16/n12113732.md#1">财政厅：新州经济恐已陷衰退 30年来首次</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/5/16/n12114534.md#1">澳洲引领全球经济复苏 房地产将指明出路</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/5/16/n12114553.md#1">疫情下越来越多住房空置 悉尼租金料将下降</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/5/17/n12115806.md#1">中共商务部拒绝对话 澳洲提醒农民注意风险</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/2/n13689970.md#1">政府呼吁提高工资增长同时兼顾企业生存能力</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/1/n13689814.md#1">E-Toll收费系统再出错 近8万驾车者受影响</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank">揭开活摘器官黑幕</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/1/25/n10086007.md#1" target="_blank">郑兢业：人吃与吃人（二）</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/1/23/n10081583.md#1" target="_blank">九旬老太自己洗衣做饭 打破医生20年前判定</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank">不一样的海外校园</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/4/7/n10284443.md#1" target="_blank">林辉：受蒋介石赞赏的“苗王”被逼自杀背后</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/7/19/n11396317.md#1" target="_blank">国防论坛基金会总裁：法轮功在反迫害最前线</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/reqcja3941/djy/blob/master/gb/22/2/3/n13553506.md#1">【未解之谜】梅辛传之三：希特勒的预言</a></li>
-<li><a href="https://github.com/reqcja3941/djy/blob/master/gb/22/2/17/n13582748.md#1">【奇事】这一种算命术连皇帝都大为惊奇</a></li>
-<li><a href="https://github.com/reqcja3941/djy/blob/master/gb/22/2/14/n13576716.md#1">【百年真相】亲历者揭秘“1952细菌战”真相</a></li>
-<li><a href="https://github.com/reqcja3941/djy/blob/master/gb/22/2/14/n13576687.md#1">【百年真相】瞒天过海 中共炮制“美军细菌战”</a></li>
-<li><a href="https://github.com/reqcja3941/djy/blob/master/gb/22/1/27/n13533579.md#1">唐朝皇族后裔的教训 德性有亏一夕化虎</a></li>
-<li><a href="https://github.com/reqcja3941/djy/blob/master/gb/22/2/25/n13605539.md#1">【财商天下】俄入侵乌克兰 北京被拉下水？</a></li>
-<li><a href="https://github.com/reqcja3941/djy/blob/master/gb/22/2/26/n13607594.md#1">【财商天下】失业潮继续扩大 中共如何稳预期</a></li>
-<li><a href="https://github.com/reqcja3941/djy/blob/master/gb/22/2/25/n13605976.md#1">【秦鹏直播】铁链女一声惊人 说明不是小花梅</a></li>
-<li><a href="https://github.com/reqcja3941/djy/blob/master/gb/22/2/25/n13605758.md#1">应对俄乌开战 北约反应部队启动 史上首次</a></li>
-<li><a href="https://github.com/reqcja3941/djy/blob/master/gb/22/2/24/n13603115.md#1">鼓鼓钱包失而复得 杜汶泽妻田蕊妮大赞台湾</a></li>
-<li><a href="https://github.com/reqcja3941/djy/blob/master/gb/22/2/24/n13602624.md#1">【更新2.24】美确信普京欲推翻乌现政权</a></li>
-<li><a href="https://github.com/reqcja3941/djy/blob/master/gb/22/2/24/n13603115.md#1">鼓鼓钱包失而复得 杜汶泽妻田蕊妮大赞台湾</a></li>
-<li><a href="https://github.com/reqcja3941/djy/blob/master/gb/22/2/25/n13605706.md#1">陈婷宣布取消“张艺谋妻子”微博头衔 引猜测</a></li>
-<li><a href="https://github.com/reqcja3941/djy/blob/master/gb/22/2/24/n13602961.md#1">产后10天俄乌开战 瑞莎焦虑乌克兰亲人全失联</a></li>
-<li><a href="https://github.com/reqcja3941/djy/blob/master/gb/22/2/24/n13603338.md#1">酒店隔离与好友成邻居 舒淇：巧到不能再巧</a></li>
-<li><a href="https://github.com/reqcja3941/djy/blob/master/gb/22/2/25/n13604262.md#1">西恩潘“人在乌克兰” 挺进战地拍入侵纪录片</a></li>
-<li><a href="https://github.com/reqcja3941/djy/blob/master/gb/22/2/24/n13602100.md#1">世界各地的长寿人群都吃些什么食物？</a></li>
-<li><a href="https://github.com/reqcja3941/djy/blob/master/gb/22/2/25/n13604960.md#1">坚果是抗糖尿病绝佳食物 防高血糖、并发症</a></li>
-<li><a href="https://github.com/reqcja3941/djy/blob/master/gb/22/2/18/n13586671.md#1">不吃早餐糖尿病风险增40％ 3组早餐养胃强身</a></li>
-<li><a href="https://github.com/reqcja3941/djy/blob/master/gb/22/2/24/n13602266.md#1">【健康1+1】感染Omicron自救方法</a></li>
-<li><a href="https://github.com/reqcja3941/djy/blob/master/gb/22/2/24/n13602281.md#1">金盏花对皮肤很好 还能消炎止痛、促伤口愈合</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/21/n11962082.md#1">【最新疫情3.22】川普启动三州国民警卫队</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/22/n11962674.md#1">意大利口罩被谁买空？意媒驳中共救援谎言</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/22/n11962341.md#1">对北京掩盖疫情失望 川普：中共非常诡秘</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/22/n11963263.md#1">【一线采访】武汉市民：对政府彻底失望</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/22/n11962520.md#1">企业家吁召开紧急会议 矛头直指中共最高层</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/23/n11965271.md#1">刘真惊传病逝 留下4岁女儿 享年44岁　</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/22/n11963031.md#1">胞弟成为台湾女婿 瑞莎曝婚礼照喊开心</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/20/n11959416.md#1">众星遭陆“限籍令”点名 台湾艺人揭中共套路</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/23/n11966011.md#1">刘真44岁辞世 演艺圈好友不舍</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/21/n11962008.md#1">好莱坞制作人瓦特染疫：身体像被巴士撞到</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/2/n11909598.md#1">【命理】长寿的命怎样看？</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/11/n11933384.md#1">断臂僧转世？小蛮童有胆 向康熙帝要官职</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/17/n11945807.md#1">2020 否极泰来</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/22/n11964127.md#1">后悔或是一味良药 但须在大限前</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/21/n11961878.md#1">【历史回眸】人们忘记神 这就是一切的起因</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/reqcja3941/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/reqcja3941/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/20/5/18/n12118036.htm">放宽限制首周末 澳洲人汽车娱乐花费大增</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/ydbzqt347/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/ydbzqt347/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/20/5/18/n12118036.htm">放宽限制首周末 澳洲人汽车娱乐花费大增</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/reqcja3941/djy/blob/master/gb/20/5/18/n12118036.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/reqcja3941/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/reqcja3941/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/reqcja3941/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/reqcja3941/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/reqcja3941/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/reqcja3941/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/reqcja3941/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/reqcja3941/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/reqcja3941/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/reqcja3941/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/reqcja3941/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/reqcja3941/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/reqcja3941/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/reqcja3941/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/reqcja3941/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/reqcja3941/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/reqcja3941/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/reqcja3941/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/reqcja3941/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/reqcja3941/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/reqcja3941/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/reqcja3941/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/reqcja3941/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/reqcja3941/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/reqcja3941/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/reqcja3941/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/reqcja3941/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/reqcja3941/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/reqcja3941/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/reqcja3941/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/reqcja3941/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/reqcja3941/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/reqcja3941/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/reqcja3941/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/reqcja3941/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/reqcja3941/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/reqcja3941/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/reqcja3941/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/reqcja3941/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/reqcja3941/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/reqcja3941/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/reqcja3941/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/reqcja3941/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/reqcja3941/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/reqcja3941/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/reqcja3941/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/reqcja3941/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/reqcja3941/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/ydbzqt347/djy/blob/master/gb/20/5/18/n12118036.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/ydbzqt347/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/ydbzqt347/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
